--- a/src/Component/Layouts/Footer/Footer.css
+++ b/src/Component/Layouts/Footer/Footer.css
@@ -45,6 +45,7 @@
 }
 
 .footer-top .text-center span {
+  cursor: pointer;
   display: grid;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -78,4 +79,8 @@
   font-size: 16px;
   line-height: 28px;
   font-weight: 400;
+}
+
+.footer-bottom u {
+  cursor: pointer;
 }
