--- a/src/Component/Layouts/Subscribe/Subscribe.css
+++ b/src/Component/Layouts/Subscribe/Subscribe.css
@@ -36,13 +36,31 @@
 .subscribe .list-item {
   display: -ms-grid;
   display: grid;
-  grid-auto-columns: 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-column-gap: 28px;
   grid-row-gap: 28px;
   -ms-grid-columns: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
+}
+
+@media screen and (max-width: 1000px) {
+  .list-item span:nth-child(n + 3) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .list-item span:nth-child(n + 2) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .subscribe {
+    padding-top: 100px;
+    padding-bottom: 0;
+  }
 }
 
 .list-item span {
