--- a/src/Component/SideBarCardBlog/SideBarCarBlog.css
+++ b/src/Component/SideBarCardBlog/SideBarCarBlog.css
@@ -25,7 +25,7 @@
   width: 100%;
   padding-right: 16px;
   padding-left: 16px;
-  background-image: url(https://assets.website-files.com/62abc23…/62abfb9…_search-icon-writelogy-x-webflow-template.svg);
+  /* background-image: url(https://assets.website-files.com/62abc23…/62abfb9…_search-icon-writelogy-x-webflow-template.svg); */
   background-position: 94% 50%;
   background-size: 25px;
   background-repeat: no-repeat;
